[gd_scene load_steps=49 format=2]

[ext_resource path="res://Scripts/HomeScreen/HomeScreenNavBar.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Rubik/Rubik-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Textures/settings-svgrepo-com (1).png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/close-circle-svgrepo-com.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/search-circle-svgrepo-com.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/read-svgrepo-com.png" type="Texture" id=6]
[ext_resource path="res://Assets/Themes/navbar_btn.tres" type="Theme" id=7]
[ext_resource path="res://Assets/Textures/heart-svgrepo-com.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=137]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=138]
default_font = SubResource( 137 )

[sub_resource type="StyleBoxEmpty" id=140]

[sub_resource type="StyleBoxFlat" id=141]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.0941176, 0.14902, 0.145098, 1 )

[sub_resource type="Theme" id=142]
PanelContainer/styles/panel = SubResource( 141 )

[sub_resource type="StyleBoxFlat" id=143]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.184314, 0.239216, 0.25098, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id=144]
PanelContainer/styles/panel = SubResource( 143 )

[sub_resource type="StyleBoxFlat" id=145]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.270588, 0.333333, 0.34902, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0, 0, 0, 0.215686 )
shadow_size = 5

[sub_resource type="Theme" id=146]
PanelContainer/styles/panel = SubResource( 145 )

[sub_resource type="DynamicFont" id=139]
size = 13
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=152]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.239216, 0.352941, 0.45098, 1 )

[sub_resource type="Theme" id=153]
PanelContainer/styles/panel = SubResource( 152 )

[sub_resource type="StyleBoxEmpty" id=160]

[sub_resource type="StyleBoxFlat" id=161]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.12549, 0.196078, 0.188235, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=154]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.156863, 0.25098, 0.239216, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=162]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.0745098, 0.117647, 0.113725, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 3

[sub_resource type="StyleBoxEmpty" id=155]

[sub_resource type="StyleBoxFlat" id=156]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0.0745098, 0.235294, 0.278431, 1 )

[sub_resource type="StyleBoxFlat" id=157]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color( 0, 0, 0, 0.321569 )
border_width_bottom = 2
border_color = Color( 0.0745098, 0.235294, 0.278431, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3

[sub_resource type="Theme" id=158]
Button/styles/focus = SubResource( 160 )
Button/styles/hover = SubResource( 161 )
Button/styles/normal = SubResource( 154 )
Button/styles/pressed = SubResource( 162 )
LineEdit/styles/focus = SubResource( 155 )
LineEdit/styles/normal = SubResource( 156 )
LineEdit/styles/read_only = SubResource( 157 )

[sub_resource type="DynamicFont" id=147]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=159]

[sub_resource type="StyleBoxEmpty" id=149]

[sub_resource type="DynamicFont" id=150]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=105]

[sub_resource type="StyleBoxEmpty" id=106]

[sub_resource type="StyleBoxEmpty" id=107]

[sub_resource type="StyleBoxEmpty" id=108]

[sub_resource type="StyleBoxEmpty" id=109]

[sub_resource type="Theme" id=110]
HScrollBar/styles/grabber = SubResource( 105 )
HScrollBar/styles/grabber_highlight = SubResource( 106 )
HScrollBar/styles/grabber_pressed = SubResource( 107 )
HScrollBar/styles/scroll = SubResource( 108 )
HScrollBar/styles/scroll_focus = SubResource( 109 )

[sub_resource type="StyleBoxFlat" id=151]
bg_color = Color( 0.156863, 0.25098, 0.239216, 1 )

[sub_resource type="Animation" id=133]
resource_name = "anti_clockwise_rotate"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 0.203063, 1 ),
"update": 0,
"values": [ 0.0, -115.7, 0.0 ]
}

[sub_resource type="Animation" id=134]
resource_name = "clockwise_rotate"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 4.43828, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 0.0 ]
}

[sub_resource type="Animation" id=135]
resource_name = "search_bar_focus"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../../Search/PanelContainer:custom_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 0.129408 ),
"update": 0,
"values": [ Color( 0.145098, 0.145098, 0.156863, 1 ), Color( 0.0784314, 0.329412, 0.415686, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Search/PanelContainer/HBoxContainer/SearchIcon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.505882, 0.627451, 0.619608, 1 ), Color( 0.505882, 0.627451, 0.619608, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../Search/PanelContainer/HBoxContainer/CloseIcon:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.956863, 0.482353, 0.482353, 0 ), Color( 0.956863, 0.482353, 0.482353, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../Search/PanelContainer/HBoxContainer/SearchIcon:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../Search/PanelContainer/HBoxContainer/CloseIcon:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=136]
resource_name = "search_bar_unfocus"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../../Search/PanelContainer:custom_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.129408, 1 ),
"update": 0,
"values": [ Color( 0.0784314, 0.329412, 0.415686, 1 ), Color( 0.145098, 0.145098, 0.156863, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Search/PanelContainer/HBoxContainer/SearchIcon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.505882, 0.627451, 0.619608, 0 ), Color( 0.505882, 0.627451, 0.619608, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../Search/PanelContainer/HBoxContainer/CloseIcon:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.956863, 0.482353, 0.482353, 1 ), Color( 0.956863, 0.482353, 0.482353, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../Search/PanelContainer/HBoxContainer/SearchIcon:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../Search/PanelContainer/HBoxContainer/CloseIcon:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=128]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=129]
content_margin_top = 10.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=130]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color( 0.145098, 0.145098, 0.156863, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id=131]

[sub_resource type="StyleBoxEmpty" id=132]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Board" type="PanelContainer" parent="."]
anchor_top = 0.093
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.199997
theme = SubResource( 138 )
custom_styles/panel = SubResource( 140 )

[node name="HBoxContainer" type="HBoxContainer" parent="Board"]
margin_right = 1024.0
margin_bottom = 544.0
custom_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="Board/HBoxContainer"]
margin_right = 827.0
margin_bottom = 544.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 142 )

[node name="ScrollContainer" type="ScrollContainer" parent="Board/HBoxContainer/PanelContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 812.0
margin_bottom = 529.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Board/HBoxContainer/PanelContainer/ScrollContainer"]
margin_right = 797.0
margin_bottom = 167.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="Board/HBoxContainer/PanelContainer/ScrollContainer/VBoxContainer"]
margin_right = 797.0
margin_bottom = 167.0
size_flags_horizontal = 3
size_flags_vertical = 2
theme = SubResource( 144 )

[node name="VBoxContainer" type="VBoxContainer" parent="Board/HBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 787.0
margin_bottom = 157.0

[node name="Label" type="Label" parent="Board/HBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 777.0
margin_bottom = 19.0
text = "Quick Open"

[node name="VBoxContainer" type="VBoxContainer" parent="Board/HBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 777.0
margin_bottom = 147.0
custom_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="Board/HBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_right = 777.0
margin_bottom = 56.0
theme = SubResource( 146 )

[node name="VBoxContainer" type="VBoxContainer" parent="Board/HBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 772.0
margin_bottom = 51.0

[node name="Label" type="Label" parent="Board/HBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 767.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.305882, 0.776471, 0.776471, 1 )
custom_fonts/font = SubResource( 139 )
text = "/path/to/filename"

[node name="Button2" type="Button" parent="Board/HBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 767.0
margin_bottom = 46.0
mouse_default_cursor_shape = 2
text = "Filename"
flat = true
align = 0

[node name="PanelContainer2" type="PanelContainer" parent="Board/HBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 777.0
margin_bottom = 124.0
theme = SubResource( 146 )

[node name="VBoxContainer" type="VBoxContainer" parent="Board/HBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/PanelContainer2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 772.0
margin_bottom = 51.0

[node name="Label" type="Label" parent="Board/HBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
margin_right = 767.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.305882, 0.776471, 0.776471, 1 )
custom_fonts/font = SubResource( 139 )
text = "/path/to/filename"

[node name="Button2" type="Button" parent="Board/HBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 21.0
margin_right = 767.0
margin_bottom = 46.0
mouse_default_cursor_shape = 2
text = "Filename"
flat = true
align = 0

[node name="PanelContainer2" type="PanelContainer" parent="Board/HBoxContainer"]
margin_left = 827.0
margin_right = 1024.0
margin_bottom = 544.0
size_flags_vertical = 3
theme = SubResource( 153 )

[node name="VBoxContainer" type="VBoxContainer" parent="Board/HBoxContainer/PanelContainer2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 192.0
margin_bottom = 539.0

[node name="PanelContainer" type="PanelContainer" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_right = 187.0
margin_bottom = 194.0
theme = SubResource( 158 )

[node name="VBoxContainer" type="VBoxContainer" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 182.0
margin_bottom = 189.0
custom_constants/separation = 6

[node name="Label" type="Label" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 177.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 147 )
text = "Create a new Project"

[node name="CheckButton" type="CheckButton" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 177.0
margin_bottom = 70.0
custom_styles/focus = SubResource( 159 )
text = "Load Template"
flat = true

[node name="LineEdit2" type="LineEdit" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 177.0
margin_bottom = 97.0
placeholder_text = "Enter Filename"

[node name="Label2" type="Label" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 177.0
margin_bottom = 122.0
text = "Default path :"

[node name="LineEdit" type="LineEdit" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 177.0
margin_bottom = 149.0
editable = false
placeholder_text = "Path to save the file"

[node name="PanelContainer" type="PanelContainer" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
visible = false
margin_top = 149.0
margin_right = 189.0
margin_bottom = 163.0

[node name="CreateButton" type="Button" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 177.0
margin_bottom = 184.0
text = "Create"

[node name="HSeparator" type="HSeparator" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 198.0
margin_right = 187.0
margin_bottom = 202.0

[node name="Label" type="Label" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 206.0
margin_right = 187.0
margin_bottom = 303.0
custom_fonts/font = SubResource( 139 )
text = "StoryCraft aims to simplify the otherwise arduous process of structuring complex storylines using formats like JSON or similar data structures. "
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 307.0
margin_right = 187.0
margin_bottom = 534.0
size_flags_vertical = 3
alignment = 2

[node name="PanelContainer2" type="PanelContainer" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer/VBoxContainer"]
margin_top = 206.0
margin_right = 187.0
margin_bottom = 227.0
custom_styles/panel = SubResource( 149 )

[node name="HBoxContainer" type="HBoxContainer" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer/VBoxContainer/PanelContainer2"]
margin_right = 187.0
margin_bottom = 21.0
alignment = 1

[node name="TextureButton" type="TextureButton" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
margin_right = 35.0
margin_bottom = 21.0
rect_min_size = Vector2( 35, 0 )
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="About" type="Button" parent="Board/HBoxContainer/PanelContainer2/VBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
margin_left = 39.0
margin_right = 187.0
margin_bottom = 21.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 150 )
text = "About Project"
flat = true

[node name="Navbar" type="ScrollContainer" parent="."]
anchor_right = 1.0
margin_bottom = 56.0
size_flags_vertical = 0
theme = SubResource( 110 )
custom_styles/bg = SubResource( 151 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Navbar"]
root_node = NodePath("../HBoxContainer/RightNav/Settings")
anims/anti_clockwise_rotate = SubResource( 133 )
anims/clockwise_rotate = SubResource( 134 )
anims/search_bar_focus = SubResource( 135 )
anims/search_bar_unfocus = SubResource( 136 )

[node name="HBoxContainer" type="HBoxContainer" parent="Navbar"]
margin_right = 1024.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 14

[node name="Logo" type="TextureButton" parent="Navbar/HBoxContainer"]
margin_right = 50.073
margin_bottom = 56.0
rect_min_size = Vector2( 50.073, 50 )
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Label2" type="Label" parent="Navbar/HBoxContainer"]
margin_left = 64.0
margin_top = 14.0
margin_right = 228.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0.639216, 0.639216, 0.639216, 1 )
custom_fonts/font = SubResource( 128 )
text = "Story Board App"

[node name="VSeparator2" type="VSeparator" parent="Navbar/HBoxContainer"]
margin_left = 242.0
margin_right = 246.0
margin_bottom = 56.0

[node name="NewFile" type="PanelContainer" parent="Navbar/HBoxContainer"]
margin_left = 260.0
margin_right = 360.0
margin_bottom = 56.0
theme = ExtResource( 7 )

[node name="Button" type="Button" parent="Navbar/HBoxContainer/NewFile"]
margin_left = 5.0
margin_right = 95.0
margin_bottom = 53.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.831373, 0.831373, 0.831373, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.858824, 0.886275, 1 )
text = "New Project"
flat = true

[node name="Open" type="PanelContainer" parent="Navbar/HBoxContainer"]
margin_left = 374.0
margin_right = 422.0
margin_bottom = 56.0
theme = ExtResource( 7 )

[node name="Button" type="Button" parent="Navbar/HBoxContainer/Open"]
margin_left = 5.0
margin_right = 43.0
margin_bottom = 53.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.831373, 0.831373, 0.831373, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.858824, 0.886275, 1 )
text = "Open"
flat = true

[node name="Import" type="PanelContainer" parent="Navbar/HBoxContainer"]
margin_left = 436.0
margin_right = 494.0
margin_bottom = 56.0
theme = ExtResource( 7 )

[node name="Button" type="Button" parent="Navbar/HBoxContainer/Import"]
margin_left = 5.0
margin_right = 53.0
margin_bottom = 53.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.831373, 0.831373, 0.831373, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.858824, 0.886275, 1 )
text = "Import"
flat = true

[node name="Help" type="PanelContainer" parent="Navbar/HBoxContainer"]
margin_left = 508.0
margin_right = 551.0
margin_bottom = 56.0
theme = ExtResource( 7 )

[node name="Button" type="Button" parent="Navbar/HBoxContainer/Help"]
margin_left = 5.0
margin_right = 38.0
margin_bottom = 53.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.831373, 0.831373, 0.831373, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.858824, 0.886275, 1 )
text = "Help"
flat = true

[node name="Search" type="PanelContainer" parent="Navbar/HBoxContainer"]
margin_left = 565.0
margin_right = 727.0
margin_bottom = 56.0
theme = ExtResource( 7 )
custom_styles/panel = SubResource( 129 )

[node name="PanelContainer" type="PanelContainer" parent="Navbar/HBoxContainer/Search"]
margin_top = 10.0
margin_right = 162.0
margin_bottom = 46.0
custom_styles/panel = SubResource( 130 )

[node name="HBoxContainer" type="HBoxContainer" parent="Navbar/HBoxContainer/Search/PanelContainer"]
margin_left = 5.0
margin_right = 157.0
margin_bottom = 36.0

[node name="SearchIcon" type="TextureButton" parent="Navbar/HBoxContainer/Search/PanelContainer/HBoxContainer"]
modulate = Color( 0.505882, 0.627451, 0.619608, 1 )
margin_right = 28.0
margin_bottom = 36.0
rect_min_size = Vector2( 28, 28 )
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="CloseIcon" type="TextureButton" parent="Navbar/HBoxContainer/Search/PanelContainer/HBoxContainer"]
visible = false
modulate = Color( 0.956863, 0.482353, 0.482353, 1 )
margin_right = 28.0
margin_bottom = 35.0
rect_min_size = Vector2( 28, 28 )
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="LineEdit" type="LineEdit" parent="Navbar/HBoxContainer/Search/PanelContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 152.0
margin_bottom = 36.0
rect_min_size = Vector2( 120, 0 )
custom_styles/focus = SubResource( 131 )
custom_styles/normal = SubResource( 132 )
expand_to_text_length = true
placeholder_text = "Search Stories"
caret_blink = true
caret_blink_speed = 0.5

[node name="RightNav" type="HBoxContainer" parent="Navbar/HBoxContainer"]
margin_left = 741.0
margin_right = 1024.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Settings" type="TextureButton" parent="Navbar/HBoxContainer/RightNav"]
margin_left = 253.0
margin_right = 283.0
margin_bottom = 56.0
rect_min_size = Vector2( 30, 40 )
mouse_default_cursor_shape = 2
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[connection signal="focus_entered" from="Navbar/HBoxContainer/Search/PanelContainer/HBoxContainer/LineEdit" to="Navbar" method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="Navbar/HBoxContainer/Search/PanelContainer/HBoxContainer/LineEdit" to="Navbar" method="_on_LineEdit_focus_exited"]
[connection signal="mouse_entered" from="Navbar/HBoxContainer/RightNav/Settings" to="Navbar" method="_on_Settings_mouse_entered"]
[connection signal="mouse_exited" from="Navbar/HBoxContainer/RightNav/Settings" to="Navbar" method="_on_Settings_mouse_exited"]
